
- Added fetcher shouldFetchInBackground property to service objects

- Added code to the YouTube sample showing how to restart a stopped upload

Changes

- Replaced GDataHTTPFetcher with GTMHTTPFetcher

- Replaced GDataOAuth with GTMOAuth2

- Feed objects now support NSFastEnumeration of entries

- YouTube uploads now return a GDataEntryYouTubeVideo object

- The YouTube upload URL is now https

- Removed Translator Toolkit support

- Remove upload callbacks on systems without NSURLConnection's didSendBodyData:
  support (only affects users running early releases of Mac OS X 10.5)

Bugs Fixed


Release 1.12.0
8-April-2011
Changes since 1.11.0

Additions

- Added static cookie storage accessor to http fetcher

- Added requirealldeleted query parameter

- Added authenticationInfo accessor for fetch error userInfo

- Added yt:name attribute to media:thumbnail

- Added calendar max-attendees query parameter and free/busy feeds

- Added docs:documentDescription and DocList thumbnailLink

Changes

- Tightened up syntax for use with C++ compilers

- The operation queue used for parsing in the service class now has accessors
  (thanks saggau)

- Project now uses latest SDKs rather than specific versions

- NSURLErrorNetworkConnectionLost is now retryable by default for 10.5 and later
  builds

- For chunk uploads, status 502 is now retryable by default

- Blogger now uses https

- Removed Google Base support

Bugs Fixed

- Fixed leak in elements allocated with GDataXMLElement's initWithXMLString:
  (thanks dshimshoni)

- Made cookies set by a redirect immediately available in the new request
  (thanks ehoracek)


Release 1.11.0
1-December-2010
Changes since 1.10.0

Additions

- Added download to a file path or a file handle in GDataHTTPFetcher

- Added comments to http fetcher logging

- Added support for chunked uploads to Picasa Web Albums

- Added keyed roles to ACLs

- Added channel standard feeds URL generator, caption track format query